# kitezh-book-library

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  mongo-init.js
dal/: Cargo.toml
dal/src/: lib.rs  models.rs
handlers/: Cargo.toml
handlers/src/: dto.rs  lib.rs
service/: Cargo.toml
service/src/: main.rs
static/: 404.html  index.html
