[package]
name = "kitezh-book-library"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10.0"
log = "0.4.17"
async-stream = "0.3"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
mongodb = "2"
serde = "1.0.152"
handlers = {path = "./handlers", feature = "full"}
[workspace]
members = [
    "service",
    "handlers",
    "dal"
]

[[bin]]
name = "kitezh-book-library"
path = "service/src/main.rs"