[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
mongodb = {version = "2.3.1", feature = "full"}
serde = "1.0.152"
async-trait = "0.1.61"
log = "0.4.17"
base64 = "0.21.0"
serde_json = "1.0.91"
async-recursion = "1.0.0"
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]