[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10.0"
log = "0.4.17"
async-stream = "0.3"
actix-files = "0.6.2"
serde = "1.0.152"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
dal = {path = "../dal"}
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]