[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10.0"
log = "0.4.17"
async-stream = "0.3"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
mongodb = "2"
serde = "1.0.152"
handlers = {path = "../handlers", feature = "full"}